--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,10 @@ openai==1.3.7
 python-dotenv==1.0.0
 apscheduler==3.10.4
 email-validator==2.1.0
-aiosmtplib==3.0.1 
+aiosmtplib==3.0.1
+
+# Development and production tools
+alembic==1.12.1          # For database migrations
+pytest==7.4.3            # For testing
+black==23.11.0           # For code formatting
+flake8==6.1.0            # For linting 
