--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
+sqlalchemy>=2.0.30
 jinja2==3.1.2
 python-multipart==0.0.6
-# openai==1.3.7  # Removed - using Azure AI only
 python-dotenv==1.0.0
 apscheduler==3.10.4
 email-validator==2.1.0
 aiosmtplib==3.0.1
 
-# Azure AI Foundation Models
-azure-ai-generative==0.1.0b1
-azure-identity==1.15.0
-azure-core==1.29.8
+# Azure OpenAI
+openai>=1.0.0
 
 # Development and production tools
 alembic==1.12.1          # For database migrations
